# GreatCirclePaths

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml  publish.yml
greatcirclepaths/: __init__.py  gcpsampling.py  gcpwork.py  healpygcp.py  main.py
tests/: test_greatcirclepaths.py  test_mwpaths.py  utils.py
