[tool.poetry]
name = "GreatCirclePaths"
version = "1.1.0"
description = ""
authors = ["Auggie Marignier <augustin.marignier.14@ucl.ac.uk>"]

[tool.poetry.dependencies]
python = "3.9"
matplotlib = "^3.2.2"
pyssht = "^1.3.2"
numpy = "^1.22.3"
scipy = "^1.8.0"
healpy = "^1.15.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.3"
black = "^19.10b0"
pytest-cases = "^2.2.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
